*gitlab-shell-5.10.0 (16 Feb 2018)

  16 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.10.0.ebuild:
  dev-vcs/gitlab-shell:  Add ebuild for version 5.10.0

*gitlab-shell-5.9.3 (06 Nov 2017)

  06 Nov 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.9.3.ebuild,
  gitlab-shell-5.0.0.ebuild, gitlab-shell-5.0.2.ebuild,
  gitlab-shell-5.0.4.ebuild, gitlab-shell-5.1.1.ebuild,
  gitlab-shell-5.3.1.ebuild, gitlab-shell-5.8.0.ebuild,
  gitlab-shell-5.9.0.ebuild:
  dev-vcs/gitlab-shell:  Add ebuild for version 5.9.3 and fix deprecated ebuild
  headers and symlink locations.

  17 Sep 2017; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-5.0.5.ebuild,
  -gitlab-shell-5.4.0.ebuild:
  dev-vcs/gitlab-shell:  Prune unneeded versions.

*gitlab-shell-5.9.0 (08 Sep 2017)

  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.9.0.ebuild:
  dev-vcs/gitlab-shell:  Add version 5.9.0.

*gitlab-shell-5.8.0 (05 Sep 2017)

  05 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.8.0.ebuild:
  dev-vcs/gitlab-shell:  Add ebuild for version 5.8.0; a dependency of gitlab-
  ce-9.5.3.

*gitlab-shell-5.3.1 (25 Jul 2017)
*gitlab-shell-5.4.0 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.3.1.ebuild,
  +gitlab-shell-5.4.0.ebuild:
  dev-vcs/gitlab-shell:  Add new versions of gitlab-shell

  16 Jul 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-shell-5.0.0.ebuild,
  gitlab-shell-5.0.2.ebuild, gitlab-shell-5.0.4.ebuild,
  gitlab-shell-5.0.5.ebuild, gitlab-shell-5.1.1.ebuild:
  dev-vcs/gitlab-shell:  Switch to EAPI 6; this fixes #46.

  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-4.1.1.ebuild,
  -gitlab-shell-5.0.3.ebuild:
  dev-vcs/gitlab-shell:  Purge obsolete versions

  08 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-gitlab-shell-4.1.1-config-paths.patch,
  +files/0002-gitlab-shell-5.1.1-Makefile.patch, gitlab-shell-5.1.1.ebuild: