@@ -1,3 +1,8 @@
+*gitlab-shell-5.10.2 (17 Feb 2018)
+
+  17 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.10.2.ebuild:
+  dev-vcs/gitlab-shell:  Add ebuild for version 5.10.2.
+
 *gitlab-shell-5.10.0 (16 Feb 2018)
 
   16 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-5.10.0.ebuild:
